--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,13 @@
 	<!-- 防止图片加载不成功 -->
 	<meta name = "referrer" content="never">
     <title>zhihu-app</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
   </head>
   <body>
     <noscript>
       <strong>We're sorry but zhihu-app doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
 </html>
