--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
 	<!-- 防止图片加载不成功 -->
 	<meta name = "referrer" content="never">
-    <title>zhihu-app</title>
+    <title>知乎</title>
+	<!-- <link rel="shortcut icon" type="image/x-icon" href="../src/assets/icon.png"> -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
   </head>
