--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
 	<meta name = "referrer" content="never">
     <title>知乎</title>
 	<!-- <link rel="shortcut icon" type="image/x-icon" href="../src/assets/icon.png"> -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"> -->
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"> -->
   </head>
   <body>
     <noscript>
